# uxd-program

./: .gitignore  .npmrc  .prettierrc.js  Anchor.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  acam.sh  clippy.toml  configure_local_validator.sh  deploy.sh  devnet_testing.sh  hana.sh  launch_app.sh  mango_article.md  nohup.out  package-lock.json  package.json  start_custom_local_validator.sh  test_with_custom_local_validator.sh  tsconfig.json
programs/controller/: Cargo.toml
programs/controller/src/: error.rs  lib.rs  mango_program.rs  note.md
programs/controller/src/instructions/: common.rs  initialize.rs  mint_uxd.rs  mod.rs  redeem_uxd.rs  register_depository.rs
programs/controller/src/mango_program/: README.md  deposit.rs  init_mango_account.rs  mod.rs  place_perp_order.rs  withdraw.rs
programs/controller/src/state/: depository.rs  mod.rs  state.rs
programs/depository/: Cargo.toml
programs/depository/src/: depository_program.rs  lib-old.rs  lib.rs
programs/oracle/: Cargo.toml
programs/oracle/src/: lib.rs
programs/uxd/: Cargo.toml  main.rs
programs/uxd/proptest-regressions/: lib.txt
programs/uxd/proptest-regressions/instructions/: initialize_controller.txt
programs/uxd/proptest-regressions/mango_utils/: limit_utils.txt  order.txt  order_delta.txt  perp_account_utils.txt
programs/uxd/proptest-regressions/test/mango_utils/: test_limit_utils.txt  test_order_delta.txt  test_perp_account_utils.txt  test_quote_mintable.txt
programs/uxd/src/: error.rs  events.rs  lib.rs
programs/uxd/src/instructions/: README.md  apply_controller_change.rs  apply_mango_depository_change.rs  compute_depositories_targets.rs  deposit_insurance_to_mango_depository.rs  edit_alloyx_vault_depository.rs  edit_controller.rs  edit_controller_authority.rs  edit_identity_depository.rs  edit_mango_depository.rs  edit_maple_pool_depository.rs  edit_mercurial_vault_depository.rs  freeze_program.rs  initialize_controller.rs  initialize_identity_depository.rs  mint.rs  mint_balanced.rs  mint_generic.rs  mint_with_alloyx_vault_depository.rs  mint_with_identity_depository.rs  mint_with_mango_depository.rs  mint_with_router.rs  mod.rs  rebalance_alloyx_vault_depository.rs  rebalance_depositories_targets.rs  rebalance_mango_depository.rs  redeem.rs  redeem_from_alloyx_vault_depository.rs  redeem_from_identity_depository.rs  redeem_from_mango_depository.rs  redeem_from_router.rs  redeem_generic.rs  register_alloyx_vault_depository.rs  register_mango_depository.rs  register_mercurial_pool_depository.rs  register_mercurial_vault_depository.rs  register_stable.rs  register_zo_depository.rs  reinject_mango_to_identity_depository.rs  set_mango_depositories_redeemable_soft_cap.rs  (+11 more)
programs/uxd/src/instructions/credix/: README.md  credix.d.ts  idl.types.d.ts
programs/uxd/src/instructions/credix_lp/: README.md  collect_profit_of_credix_lp_depository.rs  collect_profits_of_credix_lp_depository.rs  credix.json  edit_credix_lp_depository.rs  exchange_liquidity_with_credix_lp_depository.rs  mint_with_credix_lp_depository.rs  mod.rs  rebalance_create_withdraw_request_from_credix_lp_depository.rs  rebalance_from_credix_lp_depository.rs  rebalance_out_of_credix_lp_depository.rs  rebalance_redeem_from_credix_lp_depository.rs  rebalance_redeem_withdraw_request_from_credix_lp_depository.rs  rebalance_request_create_from_credix_lp_depository.rs  rebalance_request_execute_from_credix_lp_depository.rs  rebalance_request_from_credix_lp_depository.rs  register_credix_lp_depository.rs  (+1 more)
programs/uxd/src/mango_program/: anchor_mango.rs  consume_events.rs  deposit.rs  init_mango_account.rs  mod.rs  place_perp_order.rs  place_perp_order_v2.rs  place_spot_order_v2.rs  withdraw.rs
programs/uxd/src/mango_utils/: limit_utils.rs  mango_info.rs  mango_info_utils.rs  mod.rs  order.rs  order_delta.rs  perp_account_utils.rs  perp_info.rs  spot_info.rs
programs/uxd/src/mercurial_utils/: calculate_lp_tokens_value.rs  calculate_possible_lp_token_precision_loss_collateral_value.rs  check_collateral_value_changed_to_match_target.rs  mod.rs  pool_infos.rs
programs/uxd/src/serum_dex_program/: anchor_serum_dex.rs  mod.rs
programs/uxd/src/state/: alloyx_vault_depository.rs  controller.rs  credix_lp_depository.rs  depository_accounting.rs  depository_configuration.rs  identity_depository.rs  lsd_depository.rs  lsd_position.rs  mango_depository.rs  maple_pool_depository.rs  mercurial_pool_depository.rs  mercurial_vault_depository.rs  mod.rs  msol_config.rs  oracle.rs  safety_vault.rs  wrapped_mercurial_vault.rs  zo_depository.rs
programs/uxd/src/test/: mod.rs
programs/uxd/src/utils/: calculate_amount_less_fees.rs  calculate_credix_lp_depository_target_amount.rs  calculate_credix_target_amount.rs  calculate_depositories_circulating_supply.rs  calculate_depositories_mint_collateral_amount.rs  calculate_depositories_redeem_redeemable_amount.rs  calculate_depositories_redeemable_amount.rs  calculate_depositories_sum_value.rs  calculate_depositories_target_amount.rs  calculate_depositories_target_redeemable_amount.rs  calculate_depositories_targets.rs  calculate_router_depositories_target_redeemable_amount.rs  calculate_router_target_redeemable_amount.rs  decimals.rs  fees.rs  limit_utils.rs  math.rs  maths.rs  mercurial.rs  mngo.rs  mod.rs  order.rs  order_delta.rs  utils.rs  validate.rs  validate_collateral_amount.rs  validate_collateral_mint_usdc.rs  validate_loan_to_value_bps.rs  validate_redeemable_amount.rs
programs/uxd/src/zo_program/: anchor_zo.rs  mod.rs
programs/uxd/src/zo_utils/: delta_neutral_position.rs  limit_utils.rs  mod.rs  perp_info.rs
programs/uxd/tests/: mod.rs
programs/uxd/tests/integration_tests/: mod.rs  test.rs  test_identity_depository.rs  test_spl_utils.rs  test_utils.rs
programs/uxd/tests/integrations/: mod.rs  test.rs
programs/uxd/tests/program_spl/: mod.rs
programs/uxd/tests/program_test_context/: process_instruction.rs
programs/uxd/tests/program_uxd/: mod.rs
programs/uxd/tests/state/: credix_lp_depository.rs
programs/uxd/tests/utils/: calculate_amount_less_fees.rs
(+755 files in other folders)
