[package]
name = "controller"
version = "0.1.0"
authors = ["pathoam <pathoam@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "controller"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
spl-token = "3.1.1"
pyth-client = "0.2.2"
depository = { path = "../depository", features = ["cpi"] }
mango = { git = "https://github.com/acamill/mango-v3", branch = "misc/program-id-for-idiomatic-anchor", features = ["no-entrypoint"] } # Don't use that, if no version I guess
# mango = { git = "https://github.com/blockworks-foundation/mango-v3", features = ["no-entrypoint"] } # Don't use that, if no version I guess
# mango-macro = { git = "https://github.com/blockworks-foundation/mango-v3.git" }
# mango-common = { git = "https://github.com/blockworks-foundation/mango-v3.git" }