[package]
name = "controller"
version = "0.1.0"
authors = ["pathoam <pathoam@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "controller"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
spl-token = "3.1.1"
pyth-client = "0.2.2"
fixed = "1.9.0"
depository = { path = "../depository", features = ["cpi"] }
# Asked the mango guys why no version, maybe we should pin it to a commit then
mango = { git = "https://github.com/blockworks-foundation/mango-v3", features = ["no-entrypoint"] }