[package]
name = "depository"
version = "0.1.0"
authors = ["pathoam <pathoam@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "depository"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
solana-program = "1.7.11"
spl-token = "3.1.1"
