[package]
name = "oracle"
version = "0.1.0"
authors = ["pathoam <pathoam@pm.me>"]
edition = "2018"



[lib]
crate-type = ["cdylib", "lib"]
name = "oracle"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.14.0"
solana-program = "1.7.11"
pyth-client = "0.2.2"
