[package]
name = "uxd"
version = "9.0.0"
authors = [
  "acammm <alexcamill@gmail.com>",
  "cnek <ctk2012ac@gmail.com>",
  "G. Neut <gregory.neut@gmail.com>",
  "V. Brunet <vincent.brunet.us@gmail.com>",
]
description = "UXDProtocol Program, managing a redeemable mint backed by a delta neutral position."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "uxd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []
default = [
  "development",
] # `anchor build -- --no-default-features --features production` to override
production = []
development = []

[dependencies]
uxd-cpi = { version = "8.2.0", features = ["development"] }

anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mercurial-vault = { git = "https://github.com/mercurial-finance/vault-sdk", features = [
  "cpi",
], rev = "3724175d8435f7acb7a33077a5a9f1eb58ab3399" }

alloyx-cpi = { version = "0.0.2" }

credix_client = { version = "0.9.1", features = [
  "pre-mainnet",
  "cpi",
], default-features = false }
num-traits = "0.2.15"
num = "0.4.0"

[dev-dependencies]
proptest = "1.0.0"
async-trait = "0.1.73"
solana-sdk = "=1.14.21"
solana-client = "=1.14.21"
solana-program-test = "=1.14.21"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.2"

toml_datetime = "=0.6.1" # This lib introduced a breaking change in 0.6.2
winnow = "=0.4.1"        # This lib introduced a breaking change in 0.4.6
time-macros = "=0.2.10"  # This lib introduced a breaking change in 0.2.11
regex = "=1.9.6"         # This lib introduced a breaking change in 1.10.0
