[package]
name = "uxd"
version = "8.3.0"
authors = [
  "acammm <alexcamill@gmail.com>",
  "cnek <ctk2012ac@gmail.com>",
  "G. Neut <gregory.neut@gmail.com>",
  "V. Brunet <vincent.brunet.us@gmail.com>",
]
description = "UXDProtocol Program, managing a redeemable mint backed by a delta neutral position."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "uxd"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-bpf = []
default = [
  "development",
] # `anchor build -- --no-default-features --features production` to override
production = []
development = []

[dependencies]
uxd-cpi = { version = "8.3.0", features = ["development"] }

anchor-lang = "0.26.0"
anchor-spl = "0.26.0"

mercurial-vault = { git = "https://github.com/mercurial-finance/vault-sdk", features = [
  "cpi",
], rev = "3724175d8435f7acb7a33077a5a9f1eb58ab3399" }

credix_client = { version = "0.9.1", features = [
  "pre-mainnet",
  "cpi",
], default-features = false }

num-traits = "0.2.15"
num = "0.4.0"

[dev-dependencies]
proptest = "1.2.0"
async-trait = "0.1.73"

solana-sdk = "1.18.21"
solana-client = "1.18.21"
solana-program-test = "1.18.21"

spl-token = "4.0"
spl-associated-token-account = "2.1"
